# query-json

./: .gitattributes  .gitignore  .npmignore  LICENSE  Makefile  README.md  dune  dune-project  esy.json  index.html  mock.json  package-lock.json  package.json  query-json-js.opam  query-json-playground.opam  query-json-web.opam  query-json.opam  query-json.opam.template  vite.config.js
.github/workflows/: ci.yml  print-esy-cache.js  publish-npm.js  release.yml
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/.aliases/default/esy.lock/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/base-bytes.base/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/base-threads.base/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/base-unix.base/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/biniou.1.2.1/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/conf-m4.1/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/cppo.1.6.6/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/dune-build-info.2.7.0/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/dune-configurator.2.7.0/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/dune.2.7.0/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/easy-format.1.3.2/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/fix.20200131/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/gen.0.5.3/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/menhir.20200624/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/menhirLib.20200624/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/menhirSdk.20200624/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/merlin-extend.0.6/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/ocaml-compiler-libs.v0.12.1/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/ocaml-migrate-parsetree.1.7.3/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/ocaml-secondary-compiler.4.08.1-1/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/ocamlbuild.0.14.0/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/ocamlfind-secondary.1.8.1/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/ocamlfind.1.8.1/: all-00000000000000000000000000000000
_build/.aliases/default/esy.lock/opam/ppx_derivers.1.2.1/: all-00000000000000000000000000000000
_build/default/: .gitignore  package.json
_build/default/.dune/: configurator  configurator.v2
_build/default/source/: Ast.re  Ast.re.ml  Compiler.re  Compiler.re.ml  Parser.mly  Parser__mock.ml.mock  Tokenizer.re  Tokenizer.re.ml  dune  source.ml-gen
_build/default/source/.source.objs/byte/: source.cmi  source.cmo  source.cmt
_build/default/source/.source.objs/native/: source.cmx
_build/install/default/lib/query-json/: opam
_build/install/default/lib/query-json/source/: Ast.re  (+6 more)
benchmarks/: big.json  create-json.sh  hyper.sh  medium.json  report.md  run.sh
e2e/: mock.json  test.sh
esy.lock/: index.json
esy.lock/opam/bisect_ppx.2.4.1/: opam
esy.lock/opam/bisect_ppx.2.5.0/: opam
esy.lock/opam/bisect_ppx.2.6.0/: opam
esy.lock/opam/brr.0.0.2/: opam
esy.lock/opam/cstruct.5.2.0/: opam
esy.lock/opam/dune-release.1.3.3/: opam
esy.lock/opam/dune.2.9.3/: opam
esy.lock/opam/ezjsonm.1.2.0/: opam
esy.lock/opam/fpath.0.7.3/: opam
esy.lock/opam/gen.0.5.3/: opam
esy.lock/opam/gen_js_api.1.0.9/: opam
esy.lock/opam/hex.1.4.0/: opam
esy.lock/opam/js_of_ocaml-compiler.3.9.0/: opam
esy.lock/opam/js_of_ocaml-toplevel.3.9.0/: opam
esy.lock/opam/jsonoo.0.2.1/: opam
esy.lock/opam/menhir.20201216/: opam
esy.lock/opam/menhirLib.20201216/: opam
esy.lock/opam/menhirSdk.20201216/: opam
esy.lock/opam/note.0.0.2/: opam
esy.lock/opam/note.0.0.3/: opam
esy.lock/opam/ocamlbuild.0.14.0/: opam
esy.lock/opam/ojs.1.0.9/: opam
esy.lock/opam/ppx_jsobject_conv.0.9.0/: opam
esy.lock/opam/sedlex.2.2/: opam
esy.lock/opam/sedlex.2.3/: opam
esy.lock/overrides/opam__s__ocamlfind_opam__c__1.9.3_opam_override/files/: findlib.patch
js/: Js.ml  Js.re  QueryJsonJs.ml  QueryJsonJs.mli  QueryJsonJs.re  QueryJsonJs.rei  dune
parser/: Ast.re  Parser.re  Token.re  Tokenizer.re  dune  xml_parser.mly
scripts/: install.sh  make-npm-release.js  print-esy-cache.js  release-make-skeleton.js  release-opam.sh  release-postinstall.js
source/: Ast.ml  Ast.re  Chalk.ml  Chalk.re  Compiler.ml  Compiler.re  Console.ml  Console.re  Core.ml  Encoding.re  Errors.re  Json.ml  Json.re  Main.re  Parser.mly  QueryJsonCore.ml  QueryJsonCore.mli  QueryJsonCore.re  QueryJsonCore.rei  Tokenizer.ml  Tokenizer.re  dune
test/: Framework.re  ParseTest.re  Parsing_test.ml  Parsing_test.re  Runtime_test.ml  Runtime_test.re  Test.ml  Test.re  Test_parse.ml  Test_runtime.ml  _mapping.t  access.t  accessing.t  cli.t  dune  e2e  ints  ints.t  issue_36.t  keys.t  mapping.t  mock.json
web/: .gitignore  Index.re  Web.re  bsconfig.json  dune  index.html  package-lock.json  package.json
web/src/: App.re  Index.re
website/: App.mlx  App.re  Base64.ml  Base64.re  Button.mlx  Console.rei  Editor.mlx  Editor.re  Header.mlx  Header.re  Icons.mlx  Icons.re  Monaco.mli  Monaco.mlx  Monaco.re  Router.ml  Router.mli  Router.re  Spacer.mlx  Spacer.re  Text.mlx  Text.re  TextInput.mlx  TextInput.re  Website.mlx  Website.re  dune  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  webpack.config.js
website/editor/: cope.css  cope.js
www/: .gitignore  bsconfig.json  index.html  package-lock.json  package.json  webpack.config.js
www/src/: App.re  Editor.re  Icons.re
www/src/UI/: Text.re
(+24 files in other folders)
