(library
 (name QueryJsonCore)
 (public_name query-json.core)
 (libraries menhirLib yojson sedlex console.lib compiler-libs.common)
 (preprocess
  (pps ppx_deriving.show sedlex.ppx))
 (flags
  (:standard -w +A-4-9-44-48-40-42 -warn-error -3-4-9-44-48 -safe-string))
 (instrumentation
  (backend bisect_ppx)))

(menhir
 (flags --strict --external-tokens Tokenizer --explain --dump)
 (modules Parser))
