(library
 (name QueryJsonCore)
 (public_name query-json.core)
 (libraries menhirLib yojson sedlex easy-format compiler-libs.common)
 (preprocess
  (pps ppx_deriving.show sedlex.ppx))
 (instrumentation
  (backend bisect_ppx)))

(menhir
 (flags --strict --external-tokens Tokenizer --explain --dump)
 (modules Parser))
