(library
 (name app)
 (modes melange)
 (modules :standard \ Website)
 (libraries reason-react melange.dom melange.js melange-json melange-webapi)
 (preprocess
  (pps melange.ppx reason-react-ppx melange-json.ppx)))

(melange.emit
 (target website)
 (modules Website)
 (module_systems
  (es6 re.js))
 (libraries reason-react app)
 (preprocess
  (pps melange.ppx reason-react-ppx)))

(rule
 (target output.css)
 (deps
  (:config ./tailwind.config.js)
  (:input ./styles.css))
 (action
  (run npx tailwindcss -c %{config} -i %{input} -o %{target})))
