(library
 (name app)
 (modes melange)
 (modules :standard \ Website)
 (libraries reason-react melange.dom melange.js melange-json melange-webapi)
 (preprocess
  (pps melange.ppx reason-react-ppx melange-json.ppx)))

(melange.emit
 (target website)
 (modules Website)
 (module_systems
  (es6 re.js))
 (libraries reason-react app)
 (preprocess
  (pps melange.ppx reason-react-ppx)))

(install
 (section bin)
 (package query-json-playground)
 (files
  ("../node_modules/@tailwindcss/cli/dist/index.mjs" as tailwind)))

(rule
 (target output.css)
 (deps
  (source_tree .)
  (:config ./tailwind.config.js)
  (:input ./styles.css))
 (action
  (run
   node
   ../node_modules/@tailwindcss/cli/dist/index.mjs
   -c
   %{config}
   -i
   %{input}
   -o
   %{target})))
